# conectbras-agent

./: .cursorignore  .prettierrc  README.md  package.json  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
src/: App.svelte  app.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: prompts.yaml
src-tauri/src/: extractor.rs  lib.rs  models.rs  processor.rs  utilities.rs
src-tauri/src/llm/: models.rs  prompts.rs
src-tauri/src/models/: implementations.rs  workflows.rs
src/lib/components/: LightSwitch.svelte  Render.svelte  ResizableLayout.svelte  StatusPanel.svelte  StatusPanels.svelte  models.svelte.ts  processWorkflowContext.svelte.ts
src/lib/components/ui/resizable/: resizable-handle.svelte
src/lib/llm/: index.ts
