[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.17", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta.22", features = [] }
tauri-plugin-fs = "2.0.0-rc.1"
tauri-plugin-dialog = "2.0.0-rc.1"
tauri-plugin-shell = "2.0.0-rc.1"
tauri-plugin-http = "2.0.0-rc.1"
dotenv = "0.15.0"
base64 = "0.22.1"
regex = "1.10.5"
tokio = "1.38.0"
quick-xml = { version = "0.36.1", features = ["serialize"] }
lopdf = "0.34.0"
rayon = "1.10.0"
sys-info = "0.9.1"
threadpool = "1.8.1"
log = "0.4.22"
tauri-plugin-log = "2.0.0-beta.0"
uuid = "1.10.0"
lazy_static = "1.5.0"
